--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,9 @@ quarkus.hibernate-orm.log.sql=true
 #Nivel de madurez de Richardson -nivel 1
 quarkus.resteasy.path=/auth/api/v1.0
 
+#Habilitar CORS
+quarkus.http.cors.enabled=true
+quarkus.http.cors.origins=*
 
 # JWT  validar Token
 auth.issuer=matricula-auth
