--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #Configuracion de la base de datos y el puerto del servidor
 quarkus.http.port=8082
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=usuario
-quarkus.datasource.password=clave
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5433/autorizacion_db
+quarkus.datasource.username=postgres
+quarkus.datasource.password=labcom,2015
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/autorizacion
 
 quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-orm.log.sql=true
