entrega de la prueba de recuperacion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,6 @@ quarkus.http.cors.origins=*
 
 # JWT  validar Token
 #crea el token 
-auth.issuer=universidad-auth
+auth.issuer=pacientes-auth
 auth.token.ttl=3600
 smallrye.jwt.sign.key.location=privateKey.pem
